Added plugins: thermometer, vim-javascript and vim-rake

--- a/.gitmodules
+++ b/.gitmodules
@@ -125,3 +125,12 @@
 [submodule "bundle/zencoding-vim"]
 	path = bundle/zencoding-vim
 	url = git://github.com/mattn/zencoding-vim.git
+[submodule "bundle/vim-javascript"]
+	path = bundle/vim-javascript
+	url = git://github.com/pangloss/vim-javascript.git
+[submodule "bundle/vim-rake"]
+	path = bundle/vim-rake
+	url = git://github.com/tpope/vim-rake.git
+[submodule "bundle/thermometer"]
+	path = bundle/thermometer
+	url = git://github.com/dgsuarez/thermometer.git
