--- a/.gitmodules
+++ b/.gitmodules
@@ -137,3 +137,6 @@
 [submodule "bundle/conque-term"]
 	path = bundle/conque-term
 	url = git://github.com/rosenfeld/conque-term.git
+[submodule "bundle/vim-ruby-block-conv"]
+	path = bundle/vim-ruby-block-conv
+	url = git://github.com/bronson/vim-ruby-block-conv.git
