--- a/.gitmodules
+++ b/.gitmodules
@@ -137,3 +137,6 @@
 [submodule "bundle/vim-ruby-block-conv"]
 	path = bundle/vim-ruby-block-conv
 	url = git://github.com/bronson/vim-ruby-block-conv.git
+[submodule "bundle/vim-bundler"]
+	path = bundle/vim-bundler
+	url = git://github.com/tpope/vim-bundler.git
