Added vim-surround as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -152,3 +152,6 @@
 [submodule "bundle/handlebars"]
 	path = bundle/handlebars
 	url = git://github.com/nono/vim-handlebars.git
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = http://github.com/tpope/vim-surround
