--- a/.gitmodules
+++ b/.gitmodules
@@ -148,10 +148,10 @@
 	url = https://github.com/vim-scripts/bufexplorer.zip.git
 [submodule "bundle/camelcasemotion"]
 	path = bundle/camelcasemotion
-	url = https://github.com/vim-scripts/camelcasemotion
+	url = https://github.com/vim-scripts/camelcasemotion.git
 [submodule "bundle/matchit"]
 	path = bundle/matchit
-	url = https://github.com/vim-scripts/matchit.zip
+	url = https://github.com/vim-scripts/matchit.zip.git
 [submodule "bundle/taglist"]
 	path = bundle/taglist
 	url = https://github.com/vim-scripts/taglist.vim.git
